--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -15,6 +15,10 @@
       "types": "./dist/ssr-context.d.ts"
     },
     "./island": {
+      "browser": {
+        "import": "./dist/island.browser.js",
+        "types": "./dist/island.browser.d.ts"
+      },
       "import": "./dist/island.js",
       "types": "./dist/island.d.ts"
     },
