--- a/packages/examples/ssr/tsconfig.json
+++ b/packages/examples/ssr/tsconfig.json
@@ -12,6 +12,6 @@
     "isolatedModules": true,
     "noEmit": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "*.ts"],
   "exclude": ["node_modules", "dist"]
 }
