--- a/packages/examples/ssr/tsconfig.server.json
+++ b/packages/examples/ssr/tsconfig.server.json
@@ -5,5 +5,6 @@
     "noEmit": false,
     "declaration": false
   },
-  "include": ["src/server.ts"]
+  "include": ["src/**/*"],
+  "exclude": ["src/client.ts"]
 }
