--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -34,6 +34,14 @@
       "import": "./dist/renderers/linkedom-island.js",
       "types": "./dist/renderers/linkedom-island.d.ts"
     },
+    "./renderers/hydrating-dom": {
+      "import": "./dist/renderers/hydrating-dom.js",
+      "types": "./dist/renderers/hydrating-dom.d.ts"
+    },
+    "./renderers/switchable-dom": {
+      "import": "./dist/renderers/switchable-dom.js",
+      "types": "./dist/renderers/switchable-dom.d.ts"
+    },
     "./presets/island-ssr": {
       "import": "./dist/presets/island-ssr.js",
       "types": "./dist/presets/island-ssr.d.ts"
