rename to islands

--- a/packages/examples/ssr/package.json
+++ b/packages/examples/ssr/package.json
@@ -12,7 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@lattice/data": "workspace:*",
+    "@lattice/islands": "workspace:*",
     "@lattice/lattice": "workspace:*",
     "@lattice/signals": "workspace:*",
     "@lattice/view": "workspace:*"
