--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -14,6 +14,10 @@
       "import": "./dist/route.js",
       "types": "./dist/route.d.ts"
     },
+    "./link": {
+      "import": "./dist/link.js",
+      "types": "./dist/link.d.ts"
+    },
     "./types": {
       "import": "./dist/types.js",
       "types": "./dist/types.d.ts"
