--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,31 +1,20 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "declaration": true,
-    "declarationMap": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictPropertyInitialization": true,
-    "noImplicitThis": true,
-    "noUncheckedIndexedAccess": true,
-    "noImplicitReturns": true,
-    "composite": true,
+    "baseUrl": ".",
+    "rootDir": "src",
+    "outDir": "dist",
+    "tsBuildInfoFile": "dist/tsconfig.tsbuildinfo",
+    "emitDeclarationOnly": true,
     "jsx": "react",
     "types": [
       "vitest/importMeta",
       "@testing-library/jest-dom"
     ]
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "vite.config.ts",
-    "vitest.config.ts"
-  ],
+  "include": ["src/**/*"],
   "references": [
-    { "path": "../signals" },
-    { "path": "../lattice" }
-  ]
+    { "path": "../lattice" },
+    { "path": "../signals" }
+  ],
 }
