--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -37,7 +37,7 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsc --project tsconfig.build.json --noEmit && vite build",
+    "build": "pnpm typecheck && vite build && tsc -b",
     "dev": "vite build --watch",
     "clean": "rimraf dist",
     "typecheck": "tsc --noEmit",
