--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,15 @@
 {
-  "compilerOptions": {
-    "target": "ES2022",
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ESNext"
-    ],
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictBindCallApply": true,
-    "strictPropertyInitialization": true,
-    "noImplicitThis": true,
-    "useUnknownInCatchVariables": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
-    "noImplicitOverride": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
-  },
-  "exclude": [
-    "**/node_modules",
-    "**/dist"
+  "files": [],
+  "references": [
+    { "path": "./packages/lattice" },
+    { "path": "./packages/signals" },
+    { "path": "./packages/view" },
+    { "path": "./packages/islands" },
+    { "path": "./packages/router" },
+    { "path": "./packages/react" },
+    { "path": "./packages/devtools-extension" },
+    { "path": "./packages/examples" },
+    { "path": "./packages/benchmarks" },
+    { "path": "./packages/docs" }
   ]
 }
