--- a/packages/lattice/tsconfig.json
+++ b/packages/lattice/tsconfig.json
@@ -1,28 +1,12 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "declaration": true,
-    "declarationMap": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictPropertyInitialization": true,
-    "noImplicitThis": true,
-    "noUncheckedIndexedAccess": true,
-    "noImplicitReturns": true,
-    "composite": true,
-    "types": [
-      "vitest/importMeta"
-    ]
+    "baseUrl": ".",
+    "rootDir": "src",
+    "outDir": "dist",
+    "types": ["vitest/importMeta"],
+    "tsBuildInfoFile": "dist/tsconfig.tsbuildinfo",
+    "emitDeclarationOnly": true
   },
-  "include": [
-    "src/**/*.ts",
-    "testing/**/*.ts",
-    "vite.config.ts",
-    "vitest.config.ts"
-  ],
-  "references": [
-    { "path": "../signals" }
-  ]
+  "include": ["src/**/*"]
 }
