--- a/packages/view/package.json
+++ b/packages/view/package.json
@@ -73,7 +73,7 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "pnpm typecheck && vite build && tsc",
+    "build": "pnpm typecheck && vite build && tsc -b",
     "dev": "vite build --watch",
     "clean": "rimraf dist",
     "typecheck": "tsc --noEmit",
