--- a/package.json
+++ b/package.json
@@ -10,19 +10,12 @@
   "scripts": {
     "build": "lerna run build",
     "dev": "lerna run dev --parallel",
-    "dev:no-build": "lerna run dev --parallel",
-    "build:lattice": "pnpm --filter @lattice/signals build && pnpm --filter @lattice/lattice build",
-    "clean": "lerna run clean",
-    "lint": "eslint . --ext .ts,.tsx",
-    "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
+    "clean": "lerna run clean  --parallel",
+    "lint": "lerna run lint",
     "typecheck": "lerna run typecheck",
     "check": "lerna run check",
-    "check:all": "lerna run check",
+    "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
     "test": "lerna run test",
-    "bench": "pnpm --filter @lattice/benchmarks bench",
-    "bench:ci": "pnpm --filter @lattice/benchmarks bench:ci",
-    "bench:compare": "pnpm --filter @lattice/benchmarks bench:compare",
-    "example:devtools": "pnpm --filter @lattice/example-devtools dev",
     "changeset": "changeset",
     "version": "changeset version",
     "release": "pnpm build && changeset publish"
