finish consolidation of islands

--- a/packages/islands/package.json
+++ b/packages/islands/package.json
@@ -6,6 +6,22 @@
   "license": "MIT",
   "type": "module",
   "exports": {
+    "./service": {
+      "browser": {
+        "import": "./dist/service/index.browser.js",
+        "types": "./dist/service/index.browser.d.ts"
+      },
+      "import": "./dist/service/index.js",
+      "types": "./dist/service/index.d.ts"
+    },
+    "./server": {
+      "import": "./dist/server/index.js",
+      "types": "./dist/server/index.d.ts"
+    },
+    "./client": {
+      "import": "./dist/client/index.js",
+      "types": "./dist/client/index.d.ts"
+    },
     "./ssr-context": {
       "browser": {
         "import": "./dist/ssr-context.browser.js",
@@ -67,6 +83,7 @@
   },
   "dependencies": {
     "@lattice/lattice": "workspace:*",
+    "@lattice/router": "workspace:*",
     "@lattice/signals": "workspace:*",
     "@lattice/view": "workspace:*",
     "linkedom": "^0.18.12"
