--- a/packages/examples/ssr-router/tsconfig.server.json
+++ b/packages/examples/ssr-router/tsconfig.server.json
@@ -12,6 +12,8 @@
     "src/server.ts",
     "src/api.ts",
     "src/pages/**/*",
-    "src/islands/**/*"
+    "src/layouts/**/*",
+    "src/islands/**/*",
+    "src/routes.ts"
   ]
 }
