--- a/packages/islands/package.json
+++ b/packages/islands/package.json
@@ -22,6 +22,14 @@
       "import": "./dist/ssr-context.js",
       "types": "./dist/ssr-context.d.ts"
     },
+    "./client-context": {
+      "browser": {
+        "import": "./dist/client-context.browser.js",
+        "types": "./dist/client-context.browser.d.ts"
+      },
+      "import": "./dist/client-context.js",
+      "types": "./dist/client-context.d.ts"
+    },
     "./island": {
       "browser": {
         "import": "./dist/island.browser.js",
