--- a/packages/islands/package.json
+++ b/packages/islands/package.json
@@ -6,6 +6,10 @@
   "license": "MIT",
   "type": "module",
   "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
     "./server": {
       "import": "./dist/server/index.js",
       "types": "./dist/server/index.d.ts"
@@ -69,6 +73,10 @@
     "./presets/ssr-client": {
       "import": "./dist/presets/ssr-client.js",
       "types": "./dist/presets/ssr-client.d.ts"
+    },
+    "./presets/islands-app": {
+      "import": "./dist/presets/islands-app.js",
+      "types": "./dist/presets/islands-app.d.ts"
     },
     "./types": {
       "import": "./dist/types.js",
