fix browser export

--- a/packages/islands/package.json
+++ b/packages/islands/package.json
@@ -7,6 +7,10 @@
   "type": "module",
   "exports": {
     ".": {
+      "browser": {
+        "import": "./dist/index.browser.js",
+        "types": "./dist/index.browser.d.ts"
+      },
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     },
@@ -83,6 +87,10 @@
       "types": "./dist/types.d.ts"
     },
     "./factory": {
+      "browser": {
+        "import": "./dist/factory.browser.js",
+        "types": "./dist/factory.browser.d.ts"
+      },
       "import": "./dist/factory.js",
       "types": "./dist/factory.d.ts"
     }
