--- a/packages/examples/canvas/tsconfig.json
+++ b/packages/examples/canvas/tsconfig.json
@@ -10,6 +10,7 @@
   "include": ["src/**/*"],
   "references": [
     { "path": "../../signals" },
-    { "path": "../../canvas" }
+    { "path": "../../view" },
+    { "path": "../../lattice" }
   ]
 }
