--- a/packages/view/package.json
+++ b/packages/view/package.json
@@ -6,13 +6,13 @@
   "license": "MIT",
   "type": "module",
   "exports": {
-    "./renderers/dom": {
-      "import": "./dist/renderers/dom.js",
-      "types": "./dist/renderers/dom.d.ts"
+    "./adapters/dom": {
+      "import": "./dist/adapters/dom.js",
+      "types": "./dist/adapters/dom.d.ts"
     },
-    "./renderers/test": {
-      "import": "./dist/renderers/test.js",
-      "types": "./dist/renderers/test.d.ts"
+    "./adapters/test": {
+      "import": "./dist/adapters/test.js",
+      "types": "./dist/adapters/test.d.ts"
     },
     "./el": {
       "import": "./dist/el.js",
