--- a/packages/view/package.json
+++ b/packages/view/package.json
@@ -74,6 +74,10 @@
       "import": "./dist/presets/core.js",
       "types": "./dist/presets/core.d.ts"
     },
+    "./presets/dom": {
+      "import": "./dist/presets/dom.js",
+      "types": "./dist/presets/dom.d.ts"
+    },
     "./devtools": {
       "import": "./dist/devtools/index.js",
       "types": "./dist/devtools/index.d.ts"
