--- a/.nx/workspace-data/project-graph.json
+++ b/.nx/workspace-data/project-graph.json
@@ -1337,6 +1337,14 @@
                 "import": "./dist/presets/islands-app.js",
                 "types": "./dist/presets/islands-app.d.ts"
               },
+              "./presets/ssr": {
+                "import": "./dist/presets/ssr.js",
+                "types": "./dist/presets/ssr.d.ts"
+              },
+              "./presets/hydrate": {
+                "import": "./dist/presets/hydrate.js",
+                "types": "./dist/presets/hydrate.d.ts"
+              },
               "./types": {
                 "import": "./dist/types.js",
                 "types": "./dist/types.d.ts"
@@ -42092,5 +42100,5 @@
   },
   "version": "6.0",
   "errors": [],
-  "computedAt": 1764720214423
+  "computedAt": 1764721641413
 }
