--- a/packages/view/package.json
+++ b/packages/view/package.json
@@ -66,6 +66,10 @@
       "import": "./dist/map.js",
       "types": "./dist/map.d.ts"
     },
+    "./portal": {
+      "import": "./dist/portal.js",
+      "types": "./dist/portal.d.ts"
+    },
     "./on": {
       "import": "./dist/on.js",
       "types": "./dist/on.d.ts"
