--- a/packages/view/package.json
+++ b/packages/view/package.json
@@ -42,6 +42,10 @@
       "import": "./dist/types.js",
       "types": "./dist/types.d.ts"
     },
+    "./reactive-adapter": {
+      "import": "./dist/reactive-adapter.js",
+      "types": "./dist/reactive-adapter.d.ts"
+    },
     "./helpers/scope": {
       "import": "./dist/helpers/scope.js",
       "types": "./dist/helpers/scope.d.ts"
@@ -57,6 +61,10 @@
     "./helpers/text": {
       "import": "./dist/helpers/text.js",
       "types": "./dist/helpers/text.d.ts"
+    },
+    "./helpers/use": {
+      "import": "./dist/helpers/use.js",
+      "types": "./dist/helpers/use.d.ts"
     },
     "./helpers": {
       "import": "./dist/helpers/index.js",
