--- a/packages/signals/package.json
+++ b/packages/signals/package.json
@@ -6,6 +6,14 @@
   "license": "MIT",
   "type": "module",
   "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./extend": {
+      "import": "./dist/extend.js",
+      "types": "./dist/extend.d.ts"
+    },
     "./signal": {
       "import": "./dist/signal.js",
       "types": "./dist/signal.d.ts"
