--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -34,7 +34,8 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint .",
     "check": "pnpm typecheck && pnpm test && pnpm lint",
-    "test": "vitest run"
+    "test": "vitest run",
+    "api-extract": "mkdir -p api-reports temp && api-extractor run --local --verbose"
   },
   "dependencies": {
     "@lattice/lattice": "workspace:*",
