--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -43,7 +43,8 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext .ts,.tsx --ignore-pattern 'src/presets/server.ts'",
     "check": "pnpm typecheck && pnpm test && pnpm lint",
-    "test": "vitest run"
+    "test": "vitest run",
+    "api-extract": "mkdir -p api-reports temp && api-extractor run --local --verbose"
   },
   "dependencies": {
     "@lattice/lattice": "workspace:*",
