--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "@lattice/lattice": "workspace:*",
+    "@lattice/resource": "workspace:*",
     "@lattice/signals": "workspace:*",
     "@lattice/view": "workspace:*",
     "linkedom": "^0.18.12"
