--- a/packages/ssr/tsconfig.json
+++ b/packages/ssr/tsconfig.json
@@ -11,6 +11,7 @@
   "include": ["src/**/*"],
   "references": [
     { "path": "../lattice" },
+    { "path": "../resource" },
     { "path": "../signals" },
     { "path": "../view" }
   ]
