--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -33,8 +33,7 @@
     "tsx": "^4.7.0",
     "vite": "^7.1.1",
     "vitest": "^3.2.4",
-    "vue": "^3.5.0",
-    "zustand": "^5.0.3"
+    "vue": "^3.5.0"
   },
   "dependencies": {
     "alien-signals": "^2.0.5"
