--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,6 @@
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "version": "0.0.0",
   "npmClient": "pnpm",
-  "packages": ["packages/*", "tests"],
+  "packages": ["packages/*"],
   "useNx": true
 }
