--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "check": "lerna run check",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
     "test": "lerna run test",
+    "bench": "pnpm --filter @lattice/benchmarks bench",
     "api-extract": "lerna run api-extract",
     "api-collect": "mkdir -p temp && cp packages/*/temp/*.api.json temp/",
     "api-document": "pnpm api-collect && api-documenter markdown -i temp -o packages/docs/src/content/docs/api && node scripts/add-api-frontmatter.mjs",
